components/mongodb/execution/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mongodb-ingress
spec:
  rules:
  - host: HOSTNAME
    http:
      paths:
      - backend:
          service:
            name: mongodb
            port:
              name: mongodb
        path: /
        pathType: Prefix
